AA->Cart and Cart->AA conversion schemes consistent w each other

--- a/Coordinate Conversion.ipynb
+++ b/Coordinate Conversion.ipynb
@@ -13,7 +13,9 @@
    "execution_count": 1,
    "id": "a3ae243a",
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -227,7 +229,9 @@
     "code_folding": [
      0,
      33,
-     46
+     46,
+     63,
+     81
     ]
    },
    "outputs": [],
@@ -334,17 +338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "66eb9ce8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79.71127827962239"
+       "193.59588623046875"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,9 +371,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2f801a92",
    "metadata": {
+    "code_folding": [
+     0
+    ],
     "scrolled": true
    },
    "outputs": [
@@ -385,6 +392,7 @@
     }
    ],
    "source": [
+    "## find_z tests\n",
     "# Quadrant 1 boundary tests\n",
     "find_z(1e-8, 0.1)\n",
     "find_z(1e-8, 20)\n",
@@ -444,29 +452,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 49,
    "id": "3788960a",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "def convert_AA_to_Cart(theta, J):\n",
+    "    '''\n",
+    "    \n",
+    "    Given theta and J, solve for z and v_z.\n",
+    "    \n",
+    "    '''\n",
+    "\n",
+    "    z = find_z(theta, J)\n",
+    "    E = E_J(J_temp)\n",
+    "    \n",
+    "    # casework based on quadrants\n",
+    "    if (theta < 0 or theta > 2*np.pi):\n",
+    "        print(\"Error: theta not in [0, 2pi]\")\n",
+    "        \n",
+    "    if (theta < np.pi/2 or theta > 3*np.pi/2):\n",
+    "        v_z = v_z_positive(z, E)\n",
+    "    else:\n",
+    "        v_z = -v_z_positive(z, E)\n",
+    "    \n",
+    "    return z, v_z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3d828722",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8220262433980985\n",
-      "2.367527261114408\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(4.326564979325922, 0.029956649940700915)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "theta_temp = 2.96761\n",
+    "theta_temp = np.pi/2*.99\n",
     "J_temp = 5\n",
-    "z_temp = find_z(theta_temp, J_temp)\n",
-    "E_temp = E_J(J_temp)\n",
-    "\n",
-    "print(z_temp)\n",
-    "print(v_z_positive(z_temp, E_temp))"
+    "convert_AA_to_Cart(theta_temp, J_temp)"
    ]
   },
   {
@@ -474,16 +509,212 @@
    "id": "80327f7d",
    "metadata": {},
    "source": [
-    "# Define overall coordinate conversion function"
+    "# Algorithm 2: Converting from $(z,v_z)$ to $(\\theta,J)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4937298",
+   "metadata": {},
+   "source": [
+    "I propose a new algorithm:\n",
+    "1. Sample from (z, v_z)\n",
+    "2. Get E\n",
+    "3. Infer J\n",
+    "4. Do *one* integral that goes from (0 or +-z_max) to z (or vice versa), which lets us solve for $\\theta$ directly \n",
+    "\n",
+    "After we get 10,000 points or so, interpolate to get the functions $z(\\theta, J)$ and $v_z(\\theta, J)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a8a90e24",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# use z_max = 12, v_max = 4.6 since this approx. corresponds to z_max for J=25\n",
+    "\n",
+    "z_max_for_interp = 12\n",
+    "N_z = 100 # number of z's to sample\n",
+    "zs = np.linspace(-z_max_for_interp, z_max_for_interp, N_z)\n",
+    "\n",
+    "vz_max_for_interp = 4.6\n",
+    "N_vz = 100 # number of v_z's to sample\n",
+    "vzs = np.linspace(-vz_max_for_interp, vz_max_for_interp, N_vz)\n",
+    "\n",
+    "zs, vzs = np.meshgrid(zs, vzs) # both zs + vzs now have shape (N_z, N_vz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "841f767d",
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "def convert_Cart_to_AA(z, v_z):\n",
+    "    '''\n",
+    "    Given z and v_z, solve for theta and J.\n",
+    "    \n",
+    "    theta is calculated by multiplying Omega(J) by some integral over 1/v_z;\n",
+    "    I'll denote this integral as I_z.\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    E = v_z**2 / 2 + Phi(z)\n",
+    "    J = J_E(E)\n",
+    "    Omega_J = Omega(J)\n",
+    "    I_z = 0 # integral over 1/v_z\n",
+    "    \n",
+    "    ## do casework based on which quadrant we're in\n",
+    "    if (z >= 0):\n",
+    "        \n",
+    "        if (v_z >= 0): # quadrant 1\n",
+    "            I_z = integrate.quad(one_over_v_z_positive, 0, z, args=(E))[0]\n",
+    "            \n",
+    "        else: # quadrant 2; z>0 and v_z<0\n",
+    "            z_max = 2 * np.arccosh( np.exp(E/2) )\n",
+    "            # integral for one-fourth of the orbit\n",
+    "            I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, \\\n",
+    "                                             z_max, args=(E))[0]\n",
+    "            I_z = I_quarter_orbit + \\\n",
+    "                integrate.quad(one_over_v_z_positive, z, z_max, args=(E))[0]\n",
+    "            \n",
+    "    else:\n",
+    "        \n",
+    "        if (v_z <= 0): # quadrant 3\n",
+    "            z_max = 2 * np.arccosh( np.exp(E/2) )\n",
+    "            # integral for one-fourth of the orbit\n",
+    "            I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, \\\n",
+    "                                             z_max, args=(E))[0]\n",
+    "            I_z = 2*I_quarter_orbit + \\\n",
+    "                integrate.quad(one_over_v_z_positive, z, 0, args=(E))[0]\n",
+    "            \n",
+    "        else: # quadrant 4; z<0 and v_z>0\n",
+    "            z_max = 2 * np.arccosh( np.exp(E/2) )\n",
+    "            # integral for one-fourth of the orbit\n",
+    "            I_quarter_orbit = integrate.quad(one_over_v_z_positive, 0, \\\n",
+    "                                             z_max, args=(E))[0]\n",
+    "            \n",
+    "            I_z = 3*I_quarter_orbit + \\\n",
+    "                integrate.quad(one_over_v_z_positive, -z_max, z, args=(E))[0]\n",
+    "    \n",
+    "    theta = Omega_J * I_z\n",
+    "    return theta, J"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "37e94b1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 2.545587619075255e-05)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_Cart_to_AA(0, .006)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4652a4c1",
+   "metadata": {},
+   "source": [
+    "# check that AA->Cart and Cart->AA conversions are consistent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "9a2ef930",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "theta_temp = np.linspace(0, 2*np.pi*.999, 100)\n",
+    "J_temp = 0.005\n",
+    "\n",
+    "convert_AA_to_Cart_vect = np.vectorize(convert_AA_to_Cart)\n",
+    "zs_temp, vzs_temp = convert_AA_to_Cart_vect(theta_temp, J_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "90086199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.        , 0.06340305, 0.1268061 , 0.19020916, 0.25361221,\n",
+       "        0.31701526, 0.38041831, 0.44382136, 0.50722441, 0.57062747,\n",
+       "        0.63403052, 0.69743357, 0.76083662, 0.82423967, 0.88764272,\n",
+       "        0.95104578, 1.01444883, 1.07785188, 1.14125493, 1.20465798,\n",
+       "        1.26806103, 1.33146409, 1.39486714, 1.45827019, 1.52167324,\n",
+       "        1.58507629, 1.64847935, 1.7118824 , 1.77528545, 1.8386885 ,\n",
+       "        1.90209155, 1.9654946 , 2.02889766, 2.09230071, 2.15570376,\n",
+       "        2.21910681, 2.28250986, 2.34591291, 2.40931597, 2.47271902,\n",
+       "        2.53612207, 2.59952512, 2.66292817, 2.72633122, 2.78973428,\n",
+       "        2.85313733, 2.91654038, 2.97994343, 3.04334648, 3.10674954,\n",
+       "        3.17015259, 3.23355564, 3.29695869, 3.36036174, 3.42376479,\n",
+       "        3.48716785, 3.5505709 , 3.61397395, 3.677377  , 3.74078005,\n",
+       "        3.8041831 , 3.86758616, 3.93098921, 3.99439226, 4.05779531,\n",
+       "        4.12119836, 4.18460141, 4.24800447, 4.31140752, 4.37481057,\n",
+       "        4.43821362, 4.50161667, 4.56501973, 4.62842278, 4.69182583,\n",
+       "        4.75522888, 4.81863193, 4.88203498, 4.94543804, 5.00884109,\n",
+       "        5.07224414, 5.13564719, 5.19905024, 5.26245329, 5.32585635,\n",
+       "        5.3892594 , 5.45266245, 5.5160655 , 5.57946855, 5.6428716 ,\n",
+       "        5.70627466, 5.76967771, 5.83308076, 5.89648381, 5.95988686,\n",
+       "        6.02328992, 6.08669297, 6.15009602, 6.21349907, 6.27690212]),\n",
+       " array([0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005,\n",
+       "        0.005]))"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_Cart_to_AA_vect = np.vectorize(convert_Cart_to_AA)\n",
+    "convert_Cart_to_AA_vect(zs_temp, vzs_temp)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2d9fb1",
+   "id": "2a1f12c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# timing test "
+   ]
   }
  ],
  "metadata": {
