working on interp;  not done yet

--- a/Coordinate Conversion.ipynb
+++ b/Coordinate Conversion.ipynb
@@ -10,12 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "id": "a3ae243a",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -40,6 +38,7 @@
     "from astropy import constants as const\n",
     "\n",
     "import scipy.integrate as integrate \n",
+    "import scipy.interpolate as interp\n",
     "import scipy.optimize as optimize"
    ]
   },
@@ -484,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c853f62e",
+   "id": "4ca995bf",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94c29fe",
+   "id": "0253cd5b",
    "metadata": {},
    "source": [
     "I propose a new algorithm:\n",
@@ -528,32 +527,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "6ca7609c",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# use z_max = 12, v_max = 4.6 since this approx. corresponds to z_max for J=25\n",
-    "\n",
-    "z_max_for_interp = 12\n",
-    "N_z = 100 # number of z's to sample\n",
-    "zs = np.linspace(-z_max_for_interp, z_max_for_interp, N_z)\n",
-    "\n",
-    "vz_max_for_interp = 4.6\n",
-    "N_vz = 100 # number of v_z's to sample\n",
-    "vzs = np.linspace(-vz_max_for_interp, vz_max_for_interp, N_vz)\n",
-    "\n",
-    "zs, vzs = np.meshgrid(zs, vzs) # both zs + vzs now have shape (N_z, N_vz)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
-   "id": "1b02a079",
+   "id": "d0367f64",
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -611,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "756c23b9",
+   "id": "8526c8f1",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc2c868a",
+   "id": "d7c642be",
    "metadata": {},
    "source": [
     "# check that AA->Cart and Cart->AA conversions are consistent"
@@ -640,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "113e8341",
+   "id": "7e2f0bf7",
    "metadata": {
     "scrolled": true
    },
@@ -656,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "cb56a501",
+   "id": "73a0f2d3",
    "metadata": {
     "scrolled": true
    },
@@ -707,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "612bd82b",
+   "id": "05cf6f80",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df8051c",
+   "id": "1643133b",
    "metadata": {},
    "source": [
     "# interpolation"
@@ -747,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7369e11a",
+   "id": "29cb7e3b",
    "metadata": {},
    "source": [
     "### plot qualitative expectations for $z(\\theta,J)$ and $v_z(\\theta,J)$"
@@ -756,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "0b6ea6d8",
+   "id": "c5bb8eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2e08fb04",
+   "id": "0d6ec9a3",
    "metadata": {},
    "outputs": [
     {
@@ -814,11 +793,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "092f9aac",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# use z_max = 12, v_max = 4.6 since this approx. corresponds to z_max for J=25\n",
+    "\n",
+    "z_max_for_interp = 12\n",
+    "N_z = 10 # number of z's to sample\n",
+    "zs = np.linspace(-z_max_for_interp, z_max_for_interp, N_z)\n",
+    "\n",
+    "vz_max_for_interp = 4.6\n",
+    "N_vz = 10 # number of v_z's to sample\n",
+    "vzs = np.linspace(-vz_max_for_interp, vz_max_for_interp, N_vz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "a262ff02",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "deg = 3 # degree of spline; default is 3\n",
+    "\n",
+    "z_coords, vz_coords = np.meshgrid(zs, vzs)\n",
+    "thetas_grid, Js_grid = convert_Cart_to_AA_vect(z_coords, vz_coords)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "1f68db71",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "x must be strictly increasing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-99-fce404902a8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m z_interp = interp.RectBivariateSpline(thetas_grid, Js_grid, \\\n\u001b[0m\u001b[1;32m      2\u001b[0m                                       z_coords, kx=deg, ky=deg)\n\u001b[1;32m      3\u001b[0m vz_interp = interp.RectBivariateSpline(thetas_grid, Js_grid, \\\n\u001b[1;32m      4\u001b[0m                                       vz_coords, kx=deg, ky=deg)\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/interpolate/fitpack2.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, x, y, z, bbox, kx, ky, s)\u001b[0m\n\u001b[1;32m   1319\u001b[0m         \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1321\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'x must be strictly increasing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1322\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1323\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'y must be strictly increasing'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: x must be strictly increasing"
+     ]
+    }
+   ],
+   "source": [
+    "z_interp = interp.RectBivariateSpline(thetas_grid, Js_grid, \\\n",
+    "                                      z_coords, kx=deg, ky=deg)\n",
+    "vz_interp = interp.RectBivariateSpline(thetas_grid, Js_grid, \\\n",
+    "                                      vz_coords, kx=deg, ky=deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8af03e88",
+   "id": "97e10a4c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.imshow(vz_coords, cmap=cm.coolwarm, \n",
+    "          extent=[np.min(thetas_temp), np.max(thetas_temp), \n",
+    "                  np.min(Js_temp), np.max(Js_temp)],\n",
+    "          aspect='auto', origin='lower')"
+   ]
   }
  ],
  "metadata": {
