changed harmonic pol2cart so it doesn't depend on Omega

--- a/Galactic Phase Mixing and Echo.ipynb
+++ b/Galactic Phase Mixing and Echo.ipynb
@@ -123,19 +123,18 @@
    },
    "outputs": [],
    "source": [
-    "## function for converting (thetas, Js) to (x_vals, y_vals) for harmonic potential\n",
+    "## function for converting (thetas, Js) to (zs, v_zs) for harmonic potential\n",
     "\n",
     "def pol2cart_meshgrid_harmonic(thetas, Js):\n",
     "    '''\n",
     "    Given a meshgrid of angles and actions (thetas, Js), return the \n",
     "    corresponding meshgrid in Cartesian coordinates. Assumes a \n",
-    "    harmonic potential, i.e., z ~ sqrt(2*J/Omega) sin(theta) and \n",
-    "    v_z ~ sqrt(2*J*Omega) * cos(theta)\n",
+    "    harmonic potential.\n",
     "    \n",
     "    '''\n",
     "    \n",
-    "    zs = np.sqrt(2*Js / Omega(Js)) * np.sin(thetas)\n",
-    "    vzs = np.sqrt(2*Js*Omega(Js)) * np.cos(thetas)\n",
+    "    zs = np.sqrt(Js) * np.sin(thetas)\n",
+    "    vzs = np.sqrt(Js) * np.cos(thetas)\n",
     "    \n",
     "    return zs, vzs\n",
     "\n",
