--- a/Galactic Phase Mixing and Echo.ipynb
+++ b/Galactic Phase Mixing and Echo.ipynb
@@ -139,11 +139,17 @@
     "    \n",
     "    return zs, vzs\n",
     "\n",
-    "# load in interpolated converter functions\n",
+    "## load in interpolated converter functions\n",
+    "# AA -> CC\n",
     "with open('z(theta,J)_interp.pkl', 'rb') as file:\n",
     "    convert_AA_to_z = pickle.load(file)\n",
     "with open('v_z(theta,J)_interp.pkl', 'rb') as file:\n",
     "    convert_AA_to_vz = pickle.load(file)\n",
+    "# CC -> AA\n",
+    "with open('theta(z,v_z)_interp.pkl', 'rb') as file:\n",
+    "    convert_CC_to_theta = pickle.load(file)\n",
+    "with open('J(z,v_z)_interp.pkl', 'rb') as file:\n",
+    "    convert_CC_to_J = pickle.load(file)\n",
     "\n",
     "def pol2cart_meshgrid(thetas, Js):\n",
     "    '''\n",
@@ -690,12 +696,12 @@
    "id": "6307a7a8",
    "metadata": {},
    "source": [
-    "# Galactic echo animation"
+    "# GALACTIC ECHO ANIMATION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "091e07ea",
    "metadata": {
     "code_folding": [
@@ -795,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "b724a028",
    "metadata": {
     "code_folding": [
@@ -927,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "7ff42ff3",
    "metadata": {
     "code_folding": []
@@ -948,14 +954,14 @@
     "tstep = 0.5\n",
     "ts = np.arange(tmin, tmax+tstep, tstep)\n",
     "\n",
-    "# angle\n",
+    "## J=25 has z_max ~ 12 and v_max ~ 4.6, so I'll use these values as the (z, v_z) limits\n",
+    "# z\n",
     "theta_min = 0\n",
     "theta_max = 2*np.pi\n",
     "num_thetas_sampled = 100\n",
     "theta_step = theta_max/num_thetas_sampled\n",
     "\n",
-    "# in Scott's paper, the max. value of (v/sigma)*(z/z_0) ~ 20 in Fig. 3, and \n",
-    "# from eq. 7, J is roughly prop to v*z.\n",
+    "# v_z\n",
     "J_min = 0\n",
     "J_max = 20\n",
     "J_step = 0.02\n",
@@ -966,30 +972,6 @@
     "thetas, Js = np.meshgrid(thetas, Js) # both thetas and Js has shape (# of Js, # of thetas)\n",
     "\n",
     "zs, v_zs = pol2cart_meshgrid(thetas, Js)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "id": "4996e3a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# approximate the dv_z infinitesimals at z=0\n",
-    "theta_ind = 0 # index of theta = 0\n",
-    "theta_ind_for_pi = (int) (num_thetas_sampled / 2) # index of theta = pi\n",
-    "\n",
-    "# v_z domain\n",
-    "positive_v_zs = y_vals[:, theta_ind]\n",
-    "negative_v_zs = y_vals[:, theta_ind_for_pi] # theta=pi\n",
-    "negative_v_zs = np.flip(negative_v_zs)\n",
-    "\n",
-    "v_zs = np.append(negative_v_zs, positive_v_zs)\n",
-    "\n",
-    "dv_zs = v_zs[1:] - v_zs[:-1]\n",
-    "dv_zs = np.concatenate((dv_zs, dv_zs[0].reshape(1)))\n",
-    "num_v_zs = len(dv_zs)\n",
-    "dv_zs_midpoint = (int) (num_v_zs / 2)"
    ]
   },
   {
