using harmonic assumption doesn't recover echo at z=.6

--- a/Coordinate Conversion (AA to CC).ipynb
+++ b/Coordinate Conversion (AA to CC).ipynb
@@ -692,7 +692,7 @@
     "    \n",
     "    '''\n",
     "    \n",
-    "    return np.sqrt(2*J/Omega(J)) * np.sin(theta)\n",
+    "    return np.sqrt(2*J) * np.sin(theta)\n",
     "\n",
     "def vz_interp_expectation(theta, J):\n",
     "    '''\n",
@@ -700,7 +700,7 @@
     "    \n",
     "    '''\n",
     "    \n",
-    "    return np.sqrt(2*J*Omega(J)) * np.cos(theta)\n",
+    "    return np.sqrt(2*J) * np.cos(theta)\n",
     "\n",
     "z_interp_expectation_vect = np.vectorize(z_interp_expectation)\n",
     "vz_interp_expectation_vect = np.vectorize(vz_interp_expectation)\n",
